# PaperLens

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agents/: config.py  main.py  test.py
agents/data/: embedding.py  indexing.py  vector_db.py
agents/lib/: chunker.py  utils.py
agents/prompts/: agents_prompts.py
agents/system_agents/: crawler.py  papers_rag.py
agents/tools/: crawler_tools.py  rag_tools.py
backend/app/: app.py  database.py
backend/app/apis/: papers_api.py  papers_bot.py  user.py
backend/app/models/: __init__.py  chat_history.py  paper.py  user.py  user_embedding.py  user_feedback.py  user_preferences.py
backend/app/routes/: papers_api.py  papers_bot.py  user.py
backend/app/services/: db_service.py  handle_interaction.py  preprocessing.py
faiss_index/: image_index.faiss  image_index_metadata.json  text_index.faiss  text_index_metadata.json
faiss_index/faiss_index/: index.faiss  index.pkl  index_rag.faiss
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: dashboard.tsx  notification-settings.tsx  paper-card.tsx  paper-feed.tsx  paper-search.tsx  rag-panel.tsx  settings-page.tsx  sidebar.tsx  top-bar.tsx
frontend/lib/: api.ts  auth.ts
scripts/: init_db.py  seed_user.py
storage/processed/: Whats_Left_Concept_Grounding_text.txt
storage/processed/paper_Distributionally Robust Receive Combining/: Distributionally Robust Receive Combining_text.txt
