[project]
name = "ai-paper-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "arxiv>=2.2.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-cerebras",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "langchain-together>=0.3.1",
    "langgraph>=0.6.5",
    "langsmith>=0.4.14",
    "numpy>=2.2.6",
    "pip",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.42",
]
